# sigmars

./: .gitignore  Cargo.toml  README.md
src/: collection.rs  event.rs  lib.rs  rule.rs  sigma_condition.pest
src/correlation/: mod.rs  rule.rs  ruleset.rs  serde.rs  state.rs
src/correlation/state/: counter.rs  mem.rs  mod.rs
src/detection/: condition.rs  detection.rs  filter.rs  mod.rs  rule.rs  ruleset.rs  selection.rs
src/tests/: collection.rs  correlation.rs  detection.rs  mod.rs
